все сделано. Дальше уже в долгую допиливать.

--- a/CreateKey.xaml
+++ b/CreateKey.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Encrypt.CreateKey"
-             Title="CreateKey">
+             >
 
 
-    <VerticalStackLayout Padding="20" Spacing="10">
-        <Label Text="Выберите длину ключей RSA" FontSize="18" />
-        <Picker x:Name="KeySizePicker" 
+    <VerticalStackLayout  Spacing="5">
+        <Label Text="Выберите длину ключей RSA" FontSize="18"/>
+        <Picker x:Name="KeySizePicker" HeightRequest="70"
                 Title="ключи:" 
                 SelectedIndexChanged="OnKeySizeSelected">
             <Picker.ItemsSource>
@@ -16,6 +16,7 @@
                     <x:String>1024 бит, устаревший стандарт, слабая защита, подходит только для ограниченных сценариев</x:String>
                     <x:String>2048 бит, рекомендуемый стандарт для современных приложений, сбалансированная безопасность и производительность</x:String>
                     <x:String>4096 бит, высокая безопасность, подходит для долгосрочной защиты данных. Требует много вычислительной мощности</x:String>
+
                 </x:Array>
             </Picker.ItemsSource>
         </Picker>
@@ -29,7 +30,7 @@
 
         <!--  Публичный ключ RSA-->
         <Label>Публичный ключ RSA</Label>
-        <ScrollView Orientation="Vertical" HeightRequest="100">
+        <ScrollView Orientation="Vertical" HeightRequest="80">
             <Editor x:Name="PublicKeyRSA"
                     Keyboard="Chat"
                     Placeholder="Публичный ключ RSA" 
@@ -42,7 +43,7 @@
 
         <!--  Приватный ключ 1 RSA -->
         <Label>Приватный ключ 1 RSA</Label>
-        <ScrollView Orientation="Vertical" HeightRequest="100">
+        <ScrollView Orientation="Vertical" HeightRequest="80">
             <Editor x:Name="PrivatKeyRSA1"
                     Keyboard="Chat"
                     Placeholder="Приватный ключ RSA для себя" 
@@ -55,10 +56,10 @@
 
         <!--  Приватный ключ 2 RSA -->
         <Label>Приватный ключ 2 RSA</Label>
-        <ScrollView Orientation="Vertical" HeightRequest="100">
+        <ScrollView Orientation="Vertical" HeightRequest="80">
             <Editor x:Name="PrivatKeyRSA2"
                     Keyboard="Chat"
-                    Placeholder="Приватный ключ RSA для собеседникаы" 
+                    Placeholder="Приватный ключ RSA для собеседника" 
                     PlaceholderColor="Black"
                     BackgroundColor="LightGray"
                     TextColor="Purple"
@@ -72,9 +73,9 @@
                 TextColor="White"
                 FontSize="20"
                 CornerRadius="10"/>
-        
-        <Label>ключ AES</Label>
-        <ScrollView Orientation="Vertical" HeightRequest="100">
+
+        <Label HorizontalTextAlignment="Center">ключ AES</Label>
+        <ScrollView Orientation="Vertical" HeightRequest="80">
             <Editor x:Name="AESKey"
             Text="{Binding AESKEY}"
             Keyboard="Chat"
@@ -85,9 +86,9 @@
             FontSize="18"
             HorizontalTextAlignment="Center"/>
         </ScrollView>
-        
-        <Label>ключ IV</Label>
-        <ScrollView Orientation="Vertical" HeightRequest="100">
+
+        <Label HorizontalTextAlignment="Center">ключ IV</Label>
+        <ScrollView Orientation="Vertical" HeightRequest="80">
             <Editor x:Name="IVKey"
             Text="{Binding IVKEY}"
             Keyboard="Chat"
